<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:gravity="center"

    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ActivityMainHello"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ActivityMainUsername"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/Username" />

    <EditText
        android:id="@+id/ActivityMainPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:inputType="textPassword"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/ActivityMainRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ActivityMainRememberMe" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/ActivityMainSignIn"
            android:layout_marginEnd="10dp"
            android:onClick="SignIn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/ActivityMainRegister"
            android:layout_marginStart="10dp"
            android:onClick="Register"
            />
    </LinearLayout>
</LinearLayout>