<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:gravity="center"

    tools:context=".SignupScreen">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SignupScreenText"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/SignupScreenUsername"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/Username" />

    <EditText
        android:id="@+id/SignupScreenPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/SignupScreenVerifyPass"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/SignupScreenVerifyPass"
        android:inputType="textPassword"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/ActivityMainRegister"
            android:layout_marginStart="10dp"
            android:onClick="Register"
            />
    </LinearLayout>
</LinearLayout>