<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreen"
    android:orientation="vertical"
    android:clipChildren="false"
    >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/MainScreenRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:weightSum="1."
        android:background="#673AB7"
        >

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:padding="10dp"
            android:text="@string/MainScreenProfile"
            android:textSize="20sp"
            android:onClick="Profile"
            />


        <com.tahasanli.koub.MainScreenShareButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.2"

            android:translationY="-5dp"

            android:background="@drawable/main_screen_share"
            android:text="@string/MainScreenShare"
            android:textSize="20sp"

            android:onClick="Share"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:textSize="20sp"

            android:text="@string/MainScreenLogout"
            android:onClick="LogOut"
            />


    </LinearLayout>
</LinearLayout>